--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 
     
     <link rel="shortcut icon" type="image/png" href="https://www.python.org/static/opengraph-icon-200x200.png">
@@ -20,7 +20,7 @@
 
 
 body {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
 }
 
 h1 {
