--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ li a:hover {
       </button>
  
       <!-- You'll have to add padding in your image on the top and right of a few pixels (CSS Styling will break the navbar) -->
-      <a class="pull-left" href="#"><img src="NTTLogosm.png"></a>
+      <a class="pull-left" href="#">EXERCISEPYTHON</a>
     </div>
  
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -178,7 +178,6 @@ li a:hover {
 
 <div class="container">
 <div class="page-header">
-<div class="jumbotron">
 <div class="row">
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
@@ -276,7 +275,6 @@ li a:hover {
 </div>
 	<h5 class="ending">2018 vfstudios</h5>
 
-</div>
 </div>
 </div>
 </div>
