--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ li a:hover {
  
 <!-- .navbar-fixed-top, or .navbar-fixed-bottom can be added to keep the nav bar fixed on the screen -->
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <div class="container">
  
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -216,7 +216,7 @@ li a:hover {
 	</div>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">	
-	<div id="intermediate"><h3 class="intermediate"><br>Intermediate</h3>
+	<div id="intermediate"><h3 class="intermediate"><br>Inter-<br>mediate</h3>
 		<p class= "description">Demanding tasks, that create little, useful programs.</p>
 
 			<h4 class="subheading">Calculator</h4>
