--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@ body {
 }
 
 h1 {
-    font-size: 75px;
+    font-size: 70px;
     text-align: center;
     padding-top: 50px;
     letter-spacing: 2px;
+    font-weight: bold;
 }
 h2 {
     font-size: 25px;
